[package]
name = "nom-xml"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["XML","parsing","nom","parsing","encoding"]
categories = ["parsing","parser-implementations", "encoding"]
description = "A Rust Crate for parsing XML."
repository = "https://github.com/RodogInfinite/NomExML"
readme = "README.md"

[dependencies]
encoding_rs = "0.8.32"
nom.workspace = true
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"

[features]
experimental = []