[package]
name = "nom-xml"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["XML","parsing","nom","parsing","encoding"]
categories = ["parsing","parser-implementations", "encoding"]
description = "A Rust Crate for parsing XML."
repository = "https://github.com/RodogInfinite/NomExML"
readme = "README.md"

[dependencies]
encoding_rs = "0.8.32"
nom = "7.1.3"
rayon = "1.7.0"
nom-xml-derive = {workspace = true}

[features]
experimental = []
